--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>Q-GIS</span> <span class="pull-right">85%</span>
+									<span>CANVA</span> <span class="pull-right">95%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -419,7 +419,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://drive.google.com/drive/u/0/folders/1IouaR_tvMImDjAhSeBNMf2f-sW98yTLr">ROAD SURVEY</a></h3>
+                <h3 class="heading"><a href="https://drive.google.com/drive/folders/1IouaR_tvMImDjAhSeBNMf2f-sW98yTLr?usp=sharing">ROAD SURVEY</a></h3>
                 <p>Road surveying is the cornerstone of efficient infrastructure development, providing crucial insights into terrain, elevation, and geological conditions. Through meticulous mapping and analysis, road surveyors ensure the safe and effective construction and maintenance of transportation networks.</p>
               </div>
             </div>
@@ -430,7 +430,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://drive.google.com/drive/u/0/folders/1xLBOEa5qAjyhQRnzvYThbOjVDCM0L1Oo">   MARS NEPAL TOPOGRAPHIC MAP</a></h3>
+                <h3 class="heading"><a href="https://drive.google.com/drive/folders/1xLBOEa5qAjyhQRnzvYThbOjVDCM0L1Oo?usp=sharing">   MARS NEPAL TOPOGRAPHIC MAP</a></h3>
                 <p>Preparing a topographic map requires meticulous surveying of the landscape to accurately measure elevation and terrain features. Once data collection is complete, sophisticated software is employed to analyze the gathered information and generate precise contour lines representing the elevation changes. The resulting topographic map provides invaluable insights for various applications, from urban planning to environmental management.</p>
               </div>
             </div>
@@ -441,11 +441,24 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://drive.google.com/drive/u/0/folders/1UkMfmROBN6-8uclh_c8UIYRQ62M4ZQS0">Bridge Survey</a></h3>
+                <h3 class="heading"><a href="https://drive.google.com/drive/folders/1UkMfmROBN6-8uclh_c8UIYRQ62M4ZQS0?usp=sharing">Bridge Survey</a></h3>
                 <p>A bridge site survey is a vital preliminary step in bridge construction, where engineers assess the site's terrain, soil stability, and environmental factors to determine the optimal placement and design of the bridge. Through meticulous measurements and analysis, the survey provides crucial insights that inform the engineering process, ensuring the safe and efficient construction of the bridge infrastructure.</p>
               </div>
             </div>
           </div>
+		  <div class="row d-flex">
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="https://drive.google.com/drive/folders/1QZw87SMpT5FrbJ1H4CtGnaq9CHNV4pYF?usp=drive_link" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+  
+				  <h3 class="heading"><a href="https://drive.google.com/drive/folders/1QZw87SMpT5FrbJ1H4CtGnaq9CHNV4pYF?usp=drive_link">  DESIGNS  </a></h3>
+				  <p>🌐 Showcasing My Portfolio: And now, dear reader, step into my digital gallery. So, wander through my designs, dear visitor. Let them speak to you, inspire you, perhaps even nudge you toward your own creative journey. 🎨 Unleashing Creativity: Banners, Flyers, and More! 🎉</p>
+				</div>
+			  </div>
+			</div>
+			
         </div>
 	<br>
 		<!-- added justify-content-center to center align the last two projects -->
@@ -463,7 +476,7 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<!-- <a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');"> -->
 				</a>
 				<div class="text mt-3 float-right d-block">
   
